    - Added 'wartime_nation_can_be_neutral' to the config.
      This setting permits you to disable the ability for a nation to remain neutral during a war.
      Toggle in game with '/townyadmin war neutral [on/off]
    - Added fs as an abreviation for forsale when used in '/plot forsale'. 
    - Corrected an error when a nation sets neutral status. No message was sent of the cost.
    - Added global messages of what nations are at war.
    - Added better sanity checking on the global neutral settings.
    - Towny should no longer erase resident/town data on exit if there was a loading problem.
    - Moved last of the CSV files to the yml, and depreciated config settings for save_onload and first_run.
    - Fixed Nation prefix and suffix to read from the new config.yml entries
    - Depreciated all default prefix/poxfix entries. Now uses the new townLevel and nationLevel entries in config.yml
    - Added new settings for disabling world monster spawns and town control over mob spawns within their walls.
    - Changes to /townyadmin commands for war, neutral, townmobs, worldmobs, devmode and debug. Now use /townyadmin toggle XXX.
v0.72.1:
    - Fix an error on new installs where towny would not auto create the data/worlds/XXX.txt files.
v0.72.2:
    - Fixed a few typos in the language file.
    - Changed loading system to now reload ALL Towny data on the '/townyadmin reload' command.
    - Fixed an error of Nation/Towns/Residents data files not being correctly updated on a change. Fixes the error when using Inactive resident deletion.
    - '/town toggle public' now works as intended.
    - Fixed reading of town and nation level data from the yml. It actually reads it now.
    - Fixed an error with '/towny unclaim all' causing an error and corrupting a town save file.
    - Fixed '/town claim' when you have previously unclaimed all it wouldn't allow you to claim with an error of not attached to town message.
    - Prevented setting negative plot costs and taxes.